--- a/changelog/2000.changed.md
+++ b/changelog/2000.changed.md
@@ -1,1 +1,1 @@
-`mmap`, `mmap_anonymous`, `munmap` and `mremap` updated to use `NonNull`.
+`mmap`, `mmap_anonymous`, `munmap`, `mremap` and `madvise` updated to use `NonNull`.
