feat: mprotect `NonNull`

--- a/changelog/2000.changed.md
+++ b/changelog/2000.changed.md
@@ -1,1 +1,1 @@
-`mmap`, `mmap_anonymous`, `munmap`, `mremap`, `madvise` and `msync` updated to use `NonNull`.
+`mmap`, `mmap_anonymous`, `munmap`, `mremap`, `madvise`, `msync` and `mprotect` updated to use `NonNull`.
