--- a/changelog/2170.added.md
+++ b/changelog/2170.added.md
@@ -1,1 +1,2 @@
 Added newtype `Flock` to automatically unlock a held flock upon drop.
+Added `Flockable` trait to represent valid types for `Flock`.
