Updated changelog accordingly.

--- a/changelog/2170.removed.md
+++ b/changelog/2170.removed.md
@@ -1,1 +1,2 @@
-Made `fcntl::flock` private in favor of new Flock wrapper.
+Removed `fcntl::flock` in favor of new `Flock` wrapper.
+Removed unlock options from `fcntl::FlockArg`
