--- a/changelog/2283.added.md
+++ b/changelog/2283.added.md
@@ -1,1 +1,4 @@
-Added `errno::set_errno` function
+- Added `errno::Errno::set` function
+- Added `errno::Errno::set_raw` function
+- Added `errno::Errno::last_raw` function
+- Added `errno::Errno::from_raw` function
