Add changelog for IpDontFrag and Ipv6DontFrag.

--- a/changelog/2203.added.md
+++ b/changelog/2203.added.md
@@ -11,3 +11,7 @@ Added support for getting/setting IPv4 time-to-live (TTL) information via
 Added support for getting/setting IPv6 hop limit information via
 `nix::sys::socket::sockopt::Ipv6RecvHopLimit` and
 `nix::sys::socket::sockopt::Ipv6HopLimit`.
+
+Added support for preventing IP fragmentation via
+`nix::sys::socket::sockopt::IpDontFrag` for IPv4 on Linux, Android and FreeBSD, and
+`nix::sys::socket::sockopt::Ipv6DontFrag` for IPv6 for FreeBSD.
