--- a/changelog/2326.added.md
+++ b/changelog/2326.added.md
@@ -1,1 +1,1 @@
-make SigAction repr(transparent)&From<libc::sigaction>&Into<libc::sigaction>
+make SigAction repr(transparent) & can be converted to/from the libc raw type
