O_SEARCH: updated added platforms in changelog

--- a/changelog/2374.added.md
+++ b/changelog/2374.added.md
@@ -1,1 +1,1 @@
-Add `open` flag `O_SEARCH` to FreeBSD, solarish, Fuchsia 
+Add `open` flag `O_SEARCH` to AIX, Empscripten, FreeBSD, Fuchsia, solarish, WASI
