--- a/changelog/2499.added.md
+++ b/changelog/2499.added.md
@@ -1,1 +1,1 @@
-Added `MAP_SHARED_VALIDATE` & `MAP_SYNC` for x86.
+`MAP_SHARED_VALIDATE` was added for all linux targets. & `MAP_SYNC` was added for linux with the exclusion of mips architecures, and uclibc
